--- a/src/View/components/navigation/navbar.scss
+++ b/src/View/components/navigation/navbar.scss
@@ -318,6 +318,8 @@
 @media only screen and (min-width: 451px) and (max-width: 800px){ //Mini Tablet
 
     .navbar-container {
+        // border: 1px solid red;
+        width: 100%;
 
         .navbar-header{
 
