--- a/src/View/pages/booking/booking.scss
+++ b/src/View/pages/booking/booking.scss
@@ -95,14 +95,15 @@
             // background-color: #37BC9B;
             // background-color: #48CFAD;
             overflow: hidden;
+            cursor: pointer;
 
             .icon {
                 display: flex;
                 align-items: center;
                 justify-content: center;
                 position: absolute;
-                height: 50px;
-                width: 50px;
+                height: 30px;
+                width: 30px;
                 top: 10px;
                 left: 15px;
                 z-index: 8;
@@ -535,4 +536,91 @@
         }
     }    
 
+}
+
+@media only screen and (min-width: 451px) and (max-width: 800px){ //Mini Tablet
+    .booking-container {
+
+        .booking-decision {
+            width: 100%;
+            // border: 1px solid red;
+            height: 400px;
+            margin: -60px auto 100px auto;
+            border-radius: 40px;
+            height: max-content;
+            // margin: -100px auto 0px auto;
+            z-index: 2;
+            background-color: white;
+            overflow: hidden;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            gap: 20px;
+            padding: 20px 0px;
+            animation-name: slideDownUp2;
+            animation-duration: 1.5s;
+            animation-timing-function: ease-out;
+            // animation-delay: 0.5s;
+
+
+            .decision-item {
+                    width: 30%;
+                    // border: 1px solid red;
+                    box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
+                    padding: 0px 0px 20px 0px;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: center;
+                    gap: 30px;
+                    border-radius: 20px;
+                    text-align: center;
+                    font-size: 13px;
+        
+                    .button-now {
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        height: 60px;
+                        font-size: 20px;
+                        font-weight: 500;
+                        // border: 1px solid #c5c5c5;
+                        width: 100%;
+                        background-color: #00C851;
+                        color: white;
+                        padding: 50px 0px;
+                        border-radius: 40px;
+                    }
+        
+                    .button-later {
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        height: 60px;
+                        font-size: 20px;
+                        font-weight: 500;
+                        // border: 1px solid #c5c5c5;
+                        width: 100%;
+                        background-color: #ffbb33;;
+                        color: white;
+                        padding: 50px 0px;
+                        border-radius: 40px;
+                    }
+                    .action-button {
+                        position: absolute;
+                        // border: 1px solid black;
+                        height: 50px;
+                        width: 50px;
+                        border-radius: 50%;
+                        top: 250px;
+                        left: 170px;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        color: white;
+                    }
+
+            }
+        }
+    }
 }
