--- a/src/View/pages/patientLogin/plogin.scss
+++ b/src/View/pages/patientLogin/plogin.scss
@@ -171,7 +171,282 @@
             }
     
         }
-    }    
+    }   
 
+}
 
+@media only screen and (min-width: 401px) and (max-width: 450px){ //Mobile
+
+    .plogin-container {
+        display: flex;
+    
+        .plogin-wrapper {
+    
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            // margin: 60px 0px 0px 0px;
+            // border: 1px solid red;
+    
+            .plogin-wrapper-left {
+                // width: 50%;
+                width: 200px;
+                // border: 1px solid red;
+                height: 200px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                margin: 40px 20px -50px auto;
+
+                img {
+                    width: 200px;
+                }
+            }
+            .plogin-wrapper-right {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                width: 100%;
+                // border: 1px solid red;
+    
+                .form-holder {
+                    display: flex;
+                    flex-direction: column;
+                    width: 300px;
+                    // border: 1px solid red;
+                    padding: 50px 30px;
+    
+                    .headerText {
+                        margin: 20px auto ;
+                        color: #5e5e5e;
+                        span {
+                            color: #0C4CAC;
+                        }
+                    }
+    
+                    form {
+                        display: flex;
+                        flex-direction: column;
+                        gap: 30px;
+    
+                        section {
+                            display: flex;
+                            flex-direction: column;
+                            gap: 30px;
+    
+                            input:focus, textarea:focus, select:focus {
+                                outline: #0C4CAC;
+                                border: 1px solid #0C4CAC;
+                            }
+    
+                            .formInput {
+                                width: 94%;
+                                padding: 15px 0px 15px 15px;
+                                border-radius: 2em;
+                                border: 1px solid #e0e0e0;
+                            }
+    
+                        }
+    
+                        button {
+                            margin: 0px auto ;
+                            padding: 15px 0px 15px 15px;
+                            border-radius: 2em;
+                            border: none;
+                            width: 100%;
+                            background-color: #0C4CAC;
+                            color: white;
+                            font-size: 15px;
+                        }
+                    }
+                }
+                
+            }
+    
+        }
+    } 
+
+}
+
+@media only screen and (min-width: 451px) and (max-width: 700px){ //Mini Tablet
+
+    .plogin-container {
+        display: flex;
+    
+        .plogin-wrapper {
+    
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            // margin: 60px 0px 0px 0px;
+            // border: 1px solid red;
+    
+            .plogin-wrapper-left {
+                // width: 50%;
+                width: 300px;
+                // border: 1px solid red;
+                height: 300px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                margin: 50px 20px -50px auto;
+
+                img {
+                    width: 300px;
+                }
+            }
+            .plogin-wrapper-right {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                width: 100%;
+                // border: 1px solid red;
+    
+                .form-holder {
+                    display: flex;
+                    flex-direction: column;
+                    width: 400px;
+                    // border: 1px solid red;
+                    padding: 50px 30px;
+    
+                    .headerText {
+                        margin: 20px auto ;
+                        color: #5e5e5e;
+                        span {
+                            color: #0C4CAC;
+                        }
+                    }
+    
+                    form {
+                        display: flex;
+                        flex-direction: column;
+                        gap: 30px;
+    
+                        section {
+                            display: flex;
+                            flex-direction: column;
+                            gap: 30px;
+    
+                            input:focus, textarea:focus, select:focus {
+                                outline: #0C4CAC;
+                                border: 1px solid #0C4CAC;
+                            }
+    
+                            .formInput {
+                                width: 94%;
+                                padding: 15px 0px 15px 15px;
+                                border-radius: 2em;
+                                border: 1px solid #e0e0e0;
+                            }
+    
+                        }
+    
+                        button {
+                            margin: 0px auto ;
+                            padding: 15px 0px 15px 15px;
+                            border-radius: 2em;
+                            border: none;
+                            width: 100%;
+                            background-color: #0C4CAC;
+                            color: white;
+                            font-size: 15px;
+                        }
+                    }
+                }
+                
+            }
+    
+        }
+    } 
+}
+
+@media only screen and (min-width: 701px) and (max-width: 960px){ //Mini Tablet
+    .plogin-container {
+        display: flex;
+    
+        .plogin-wrapper {
+    
+            display: flex;
+            width: 100%;
+            // margin: 60px 0px 0px 0px;
+            // border: 1px solid red;
+    
+            .plogin-wrapper-left {
+                width: 50%;
+                // border: 1px solid red;
+                height: 100vh;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+
+                img {
+                    width: 400px;
+                }
+            }
+            .plogin-wrapper-right {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                width: 50%;
+                // border: 1px solid red;
+    
+                .form-holder {
+                    display: flex;
+                    flex-direction: column;
+                    width: 320px;
+                    // border: 1px solid red;
+                    padding: 50px 30px;
+    
+                    .headerText {
+                        margin: 20px auto ;
+                        color: #5e5e5e;
+                        span {
+                            color: #0C4CAC;
+                        }
+                    }
+    
+                    form {
+                        display: flex;
+                        flex-direction: column;
+                        gap: 30px;
+    
+                        section {
+                            display: flex;
+                            flex-direction: column;
+                            gap: 30px;
+    
+                            input:focus, textarea:focus, select:focus {
+                                outline: #0C4CAC;
+                                border: 1px solid #0C4CAC;
+                            }
+    
+                            .formInput {
+                                width: 97%;
+                                padding: 15px 0px 15px 15px;
+                                border-radius: 2em;
+                                border: 1px solid #e0e0e0;
+                            }
+    
+                        }
+    
+                        button {
+                            margin: 0px auto ;
+                            padding: 15px 0px 15px 15px;
+                            border-radius: 2em;
+                            border: none;
+                            width: 100%;
+                            background-color: #0C4CAC;
+                            color: white;
+                            font-size: 15px;
+                        }
+                    }
+                }
+                
+            }
+    
+        }
+    }
 }
