--- a/src/View/components/navigation/navbar.scss
+++ b/src/View/components/navigation/navbar.scss
@@ -229,6 +229,87 @@
 }
 
 
+.staffnavbar-container {
+    display: flex;
+    flex-direction: column;
+    z-index: 20;
+    width: 60px;
+    margin: -60px 0px 0px 0px;
+    position: fixed;
+    background-color: #fff;
+    // background-color: #0f5bce;
+    box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
+
+    .staffnavbar-wrapper {
+        height: 100vh;
+        // border: 1px solid yellow;
+        z-index: 20;
+        display: flex;
+        font-size: 10px;
+        color: #c4dff5;
+        align-items: center;
+
+        .link {
+            text-decoration: none;
+            color: #0C4CAC;
+            // color: #c4dff5;
+            margin: 0px auto 0px auto;
+        }
+
+        .staffnavbar-item {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            // border: 1px solid white;
+            margin: 0px auto 0px auto;
+            gap: 5px;
+        }
+        
+    }
+}
+
+
+.staffnavbarmobile-container {
+    display: flex;
+    flex-direction: column;
+    z-index: 20;
+    width: 99.9%;
+    // margin: 60px 0px 0px 0px;
+    position: fixed;
+    background-color: #fff;
+    justify-content:baseline;
+    border-top: 1px solid #EEEEEE;
+    bottom: 0px;
+
+    .staffnavbarmobile-wrapper {
+        height: 60px;
+        // border: 1px solid yellow;
+        z-index: 20;
+        display: flex;
+        font-size: 10px;
+        color: #0f5bce;
+        align-items: center;
+        // margin: 0px auto 0px auto;
+
+        .link {
+            text-decoration: none;
+            color: #0f5bce;
+            margin: 0px auto 0px auto;
+        }
+
+        .staffnavbarmobile-item {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            // border: 1px solid white;
+            margin: 0px auto 0px auto;
+            gap: 5px;
+        }
+        
+    }
+}
+
+
 @media only screen and (min-width: 320px) and (max-width: 400px){ //Mobile
 
     .navbar-container {
